--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,14 +3,13 @@ name: CI
 on: [push]
 
 jobs:
-  build:
+  cribbage:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
           go-version: '1.23.x'
-      - run: go get .
       - run: go vet ./...
       - run: go test ./...
       - run: go build -v ./cmd/cribbage
